2008-10-10  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.14]

	* configure.ac: pre-release version bump
	* NEWS: updates.
	* debian/changelog: updates.

2008-10-10  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-button.c: (hildon_picker_button_finalize):
	Disconnect the handler for HildonTouchSelector::changed.

	(hildon_picker_button_selector_selection_changed): Update the button
	value if the selection change was not triggered by the
	HildonPickerDialog.

	(hildon_picker_button_set_selector): connect to
	HildonTouchSelector::changed.

	Fixes: NB#89650 (Picker button is not updated, when selection in
	selector has changed)

2008-10-09  Alejandro Pinheiro	 <apinheiro@igalia.com>

	* src/hildon-picker-dialog.c
	(hildon_picker_dialog_realize): Removed as not required
	(hildon_picker_dialog_class_init): Avoid to redefine widget->realize
	* src/hildon-picker-button.c
	(_current_selector_empty): New function, checks if the selector is empty
	(hildon_picker_button_clicked): Now it checks (using _current_selector_empty)
	if the current selector is empty, in order to avoid to show the dialog
	close the dialog in this case (and shows a g_warning).

	Fixes: NB#88946 (Hildon Picker button should disable itself if there are no values)

2008-10-09  Alejandro G. Castro	 <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_scroll): Added clause to stop movement when
	the child of pannable is smaller than one page.
	(hildon_pannable_area_scroll_to): Added conditions to avoid
	starting the scrolling movement if the child is smaller than one
	page, the complete child is in the screen, we do not have to move.

	Fixes: NB#89632 (Picker button selection doesn't change on first click)

2008-10-09  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu.c: Removed the 'columns' property, as now
	this is managed automatically by the widget when the size of the
	screen changes.

2008-10-09  Alberto Garcia  <agarcia@igalia.com>
